k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gemmap-service
  labels: { app: gemmap-api }
spec:
  type: ClusterIP
  selector: { app: gemmap-api }
  ports:
    - port: 8080
      targetPort: 8080
